syntax = "proto3";

package gnboot;

import "openapiv3/annotations.proto";
import "google/api/annotations.proto";
import "google/api/field_behavior.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/liluoliluoli/gnboot/api/user";

option (openapi.v3.document) = {
  info : {title : "user";
version : "1.0.0";
}
components : {
security_schemes: {
additional_properties:
  [{
    name:
      "BearerAuth";
    value: {
    security_scheme: {
    type:
      "http";
    scheme:
      "bearer";
    }
    }
  }]
}
}
  security: [
    {
      additional_properties: [
        {
          name: "BearerAuth";
          value: {
            value: []
          }
  }
      ]
      }
  ]
  }
  ;

  service UserRemoteService {
    rpc UpdateFavorite(UpdateFavoriteRequest) returns (google.protobuf.Empty) {
      option (google.api.http) = {
        post : "/user/updateFavorite"
        body : "*"
      };
    }
    rpc UpdatePlayedStatus(UpdatePlayedStatusRequest) returns (google.protobuf.Empty) {
      option (google.api.http) = {
        post : "/user/updatePlayedStatus"
        body : "*"
      };
    }
  }


  message UpdateFavoriteRequest {
    int32 userId = 1;
    int32 videoId = 2;
    bool favorite = 3;
  }


message UpdatePlayedStatusRequest {
  int32 userId = 1;
  int32 videoId = 2;
  int32 episodeId = 3;
  int32 position = 4;
}
